<resources>
    <string name="app_name">PizzApp</string>
    <string name="num_of_card">Num Of Card</string>
    <string name="family_size">פיצה משפחתית</string>
    <string name="personal_size">פיצה אישית</string>
    <string name="big_size">פיצה ענקית</string>
    <string name="personal_size_description">Personal pizza size button</string>
    <string name="big_size_description">big pizza size button</string>
    <string name="family_size_description">family pizza size button</string>
    <string name="next_button_description">next button</string>
    <string name="personal_size_message">Great, You chose personal size pizza</string>
    <string name="family_size_message">Great, You chose family size pizza</string>
    <string name="big_size_message">Great, You chose big size pizza</string>
    <string name="size_choose_headline_text">בחרו גודל</string>
    <string name="first_dots_description">pages indicator</string>
    <string name="drink_choose_headline_text">Select a drink</string>
    <string name="second_headline_text">בחרו אמצעי תשלום</string>
    <string name="payment_text">תשלום</string>
    <string name="address_text">כתובת</string>
    <string name="phone_text">טלפון</string>
    <string name="phoneNumber_text">מספר טלפון</string>
    <string name="price_text">מחיר ההזמנה:</string>
    <string name="creditPayment">תשלום באשראי</string>
    <string name="price">מחיר:</string>
    <string name="creditCardNum">מספר כרטיס אשראי</string>
    <string name="cvv">CVV</string>
    <string name="validity">תוקף</string>
    <string name="email">אימייל</string>
    <string name="mushrooms">פטריות</string>
    <string name="olives">זיתים</string>
    <string name="onion">בצל</string>
    <string name="tomatos">עגבניה</string>
    <string name="pineapple">אננס</string>
    <string name="cheese">גבינה</string>
    <string name="fifty_shekels">50 שקלים</string>
    <string name="sixty_shekels">60 שקלים</string>
    <string name="forty_shekels">40 שקלים</string>
    <string name="none_drink_description">Without drink option</string>
    <string name="cola_description">drink option: coke</string>
    <string name="fanta_descrition">drink option: fanta</string>
    <string name="sprite_description">drink option: Sprite</string>
    <string name="drink_page_headline_description">drinks page headline : Drinks</string>
    <string name="right_arrow_description">Right arrow</string>
    <string name="left_arrow_description">Left arrow</string>
    <string name="homePage_headline_description">HomePage headline description: Choose Pizza</string>
    <string name="scroll_to_choose_text">גלול כדי לבחור</string>
    <string name="met_mask_text">###-#######</string>
    <string name="digits_text">0123456789</string>
    <string name="howToPay_text">בחר אמצעי תשלום</string>
</resources>
