<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_picture"
    android:hapticFeedbackEnabled="false"
    android:isScrollContainer="false"
    tools:context=".HomePage">

    <ImageView
        android:id="@+id/dots_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dots_up_margin"
        android:layout_marginBottom="@dimen/dots_down_margin"
        android:contentDescription="@string/first_dots_description"
        app:layout_constraintBottom_toTopOf="@+id/page_headline_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/first_dot" />

    <TextView
        android:id="@+id/page_headline_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dots_down_margin"
        android:gravity="start|end"
        android:text="@string/size_choose_headline_text"
        android:textSize="@dimen/page_headline_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dots_pictures" />

    <HorizontalScrollView
        android:id="@+id/size_choose_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:foregroundGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/personal_size_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/margin_wide"
                android:layout_marginRight="@dimen/margin_wide"
                android:background="#00FFFFFF"
                android:contentDescription="@string/personal_size_description"
                android:fadeScrollbars="false"
                app:srcCompat="@drawable/personal_pizza" />

            <ImageView
                android:id="@+id/family_size_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#00FFFFFF"
                android:contentDescription="@string/family_size_description"
                app:srcCompat="@drawable/family_pizza" />

            <ImageView
                android:id="@+id/big_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/margin_wide"
                android:layout_marginRight="@dimen/margin_wide"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/big_size_description"
                app:srcCompat="@drawable/big_pizza" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/next_button_left_margin"
        android:layout_marginLeft="@dimen/next_button_left_margin"
        android:layout_marginBottom="@dimen/next_button_bottom_margin"
        android:background="#00FFFFFF"
        android:contentDescription="@string/next_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/next_button_picture"
        android:onClick="launchToppingsPage"/>

</androidx.constraintlayout.widget.ConstraintLayout>