<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CustomerDetails">

    <ImageView
        android:id="@+id/customerDetailsPage_headline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headline_height"
        android:layout_marginTop="@dimen/bottom_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/payment_headline" />

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="@dimen/next_and_previous_button_size"
        android:layout_height="@dimen/next_and_previous_button_size"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:background="#00FFFFFF"
        android:contentDescription="@string/next_button_description"
        android:onClick="launchDrinksPagePage"
        app:layout_constraintBottom_toBottomOf="@+id/dots_level_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dots_level_4"
        app:srcCompat="@drawable/previous_button" />

    <EditText
        android:id="@+id/adress_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/closeFromBottom_margin"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:ems="10"
        android:hint="@string/address_text"
        android:inputType="textLongMessage|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerDetailsPage_headline" />

    <EditText
        android:id="@+id/phoneNumber_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/closeFromBottom_margin"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:ems="10"
        android:hint="@string/phone_text"
        android:inputType="textLongMessage|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_editText" />

    <ImageView
        android:id="@+id/imageView_pizza"
        android:layout_width="@dimen/finalPizza_size"
        android:layout_height="@dimen/finalPizza_size"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/closeFromBottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber_editText"
        app:srcCompat="@drawable/pizza" />

    <ImageButton
        android:id="@+id/creditCard_button"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:layout_marginStart="@dimen/veryWide_margin"
        android:layout_marginLeft="@dimen/veryWide_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:background="#00FFFFFF"
        android:onClick="launchCredit"
        app:layout_constraintBottom_toTopOf="@+id/dots_level_4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/creditcard_button" />

    <ImageButton
        android:id="@+id/cash_button"
        android:layout_width="135dp"
        android:layout_height="155dp"
        android:layout_marginEnd="@dimen/veryWide_margin"
        android:layout_marginRight="@dimen/veryWide_margin"
        android:background="#00FFFFFF"
        android:onClick="launchLastScreen"
        app:layout_constraintBottom_toBottomOf="@+id/creditCard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/creditCard_button"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cash" />

    <ImageView
        android:id="@+id/dots_level_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dots_4" />


    <TextView
        android:id="@+id/total_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#E8961F1F"
        android:textSize="@dimen/priceText_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/creditCard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushrooms_rightHalf" />


    <ImageView
        android:id="@+id/fanta_drink"
        android:layout_width="@dimen/drink_width"
        android:layout_height="@dimen/drink_height"
        android:layout_marginEnd="@dimen/wideSize_margin"
        android:layout_marginRight="@dimen/wideSize_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.413"
        app:srcCompat="@drawable/fanta_bottle" />

    <ImageView
        android:id="@+id/sprite_drink"
        android:layout_width="@dimen/drink_width"
        android:layout_height="@dimen/drink_height"
        android:layout_marginEnd="@dimen/wideSize_margin"
        android:layout_marginRight="@dimen/wideSize_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.401"
        app:srcCompat="@drawable/sprite_bottle" />

    <ImageView
        android:id="@+id/cola_drink"
        android:layout_width="@dimen/drink_width"
        android:layout_height="@dimen/drink_height"
        android:layout_marginEnd="@dimen/wideSize_margin"
        android:layout_marginRight="@dimen/wideSize_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:srcCompat="@drawable/coke_bottle" />

    <ImageView
        android:id="@+id/mushrooms_rightHalf"
        android:layout_width="@dimen/toppingsRightHalfFinal_width"
        android:layout_height="@dimen/toppingsRightHalfFinal_height"
        android:src="@drawable/mushroom_r"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.351" />

    <ImageView
        android:id="@+id/mushrooms_leftHalf"
        android:layout_width="@dimen/toppingsLeftHalfFinal_width"
        android:layout_height="@dimen/toppingsLeftHalfFinal_height"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:src="@drawable/mushroom_l"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintStart_toStartOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/onion_rightHalf"
        android:layout_width="@dimen/toppingsRightHalfFinal_width"
        android:layout_height="@dimen/toppingsRightHalfFinal_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.351"
        app:srcCompat="@drawable/onion_r" />

    <ImageView
        android:id="@+id/onion_leftHalf"
        android:layout_width="@dimen/toppingsLeftHalfFinal_width"
        android:layout_height="@dimen/toppingsLeftHalfFinal_height"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintStart_toStartOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/onion_l" />

    <ImageView
        android:id="@+id/pineapple_rightHalf"
        android:layout_width="@dimen/toppingsRightHalfFinal_width"
        android:layout_height="@dimen/toppingsRightHalfFinal_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.351"
        app:srcCompat="@drawable/pineapple_r" />

    <ImageView
        android:id="@+id/pineapple_leftHalf"
        android:layout_width="@dimen/toppingsLeftHalfFinal_width"
        android:layout_height="@dimen/toppingsLeftHalfFinal_height"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintStart_toStartOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pineapple_l" />

    <ImageView
        android:id="@+id/tomato_rightHalf"
        android:layout_width="@dimen/toppingsRightHalfFinal_width"
        android:layout_height="@dimen/toppingsRightHalfFinal_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.351"
        app:srcCompat="@drawable/tomato_r" />

    <ImageView
        android:id="@+id/tomato_leftHalf"
        android:layout_width="@dimen/toppingsLeftHalfFinal_width"
        android:layout_height="@dimen/toppingsLeftHalfFinal_height"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintStart_toStartOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tomato_l" />

    <ImageView
        android:id="@+id/olives_rightHalf"
        android:layout_width="@dimen/toppingsRightHalfFinal_width"
        android:layout_height="@dimen/toppingsRightHalfFinal_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintEnd_toEndOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="0.351"
        app:srcCompat="@drawable/olives_r" />

    <ImageView
        android:id="@+id/olives_leftHalf"
        android:layout_width="@dimen/toppingsLeftHalfFinal_width"
        android:layout_height="@dimen/toppingsLeftHalfFinal_height"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:src="@drawable/olives_l"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_pizza"
        app:layout_constraintStart_toStartOf="@+id/imageView_pizza"
        app:layout_constraintTop_toTopOf="@+id/imageView_pizza"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>